--- a/odoo.conf
+++ b/odoo.conf
@@ -5,7 +5,7 @@ db_host = localhost
 db_port = 5432
 db_user = odoos_new_db
 db_password = nive@123
-addons_path = /home/nivetha/Downloads/odoo-17.0/addons,/home/nivetha/Downloads/odoo-17.0/stotz
+addons_path = /home/nivetha/Downloads/odoo-17.0/ent_17,/home/nivetha/Downloads/odoo-17.0/addons,/home/nivetha/Downloads/odoo-17.0/stotz
 logfile = /var/log/odoo/odoo.log
 http_port= 1717
 dbfilter = .*
